feat(daily-reported): 将Page改为Pager
将Page改为Pager,并将旧Page弃用, 匹配于go的pager, 将内部API更换